modifique el html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <button class="button-85" id="buttonnumAleatorio">
                     NUMERO ALEATORIO
                 </button>
-                <a href="https://www.youtube.com/" target="_blank" class="link" id="compra">
+                <a href="https://www.youtube.com/channel/UCWa6gzJ3RppJ6jdOu2EUT7A" target="_blank" class="link" id="compra">
                     <button class="button-64" role="button"><span class="text">COMPRAR</span></button>
                 </a>
                 
